# omniagent

./: .env.antigravity.example  .env.claude.example  .env.example  .env.pydantic.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  SECURITY.md  agent-platform-plan.md  docker-compose.langfuse.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  pyproject.toml  pyrightconfig.json  test_run.sh  test_service.py
.github/workflows/: ci.yml
migrations/: 001_init.sql  002_key_prefix.sql  003_tools_base_url.sql  004_drop_llm_keys.sql  005_drop_tools_available.sql  006_versioning.sql  007_agent_model.sql  009_rename_service_keys_to_api_keys.sql  010_api_keys_name_unique.sql  011_agent_auth_context.sql  012_skill_context.sql  013_openapi_tools.sql  014_tool_timeout.sql  015_oauth2_pending.sql  016_oauth_token_cache.sql  017_api_key_scopes.sql  018_auth_context_encrypted.sql  019_schedules.sql  020_agent_memory.sql  021_session_schedule_id.sql  022_session_is_scheduled.sql  023_rename_skills_to_toolboxes.sql  024_toolbox_auth.sql  025_namespace_auth.sql  026_status_revamp.sql  027_scheme_auth.sql  028_cancel_requested.sql  030_langfuse_trace_id.sql
omniagent/: __init__.py  _client.py  _decorator.py  _models.py  _registry.py  config.py  constants.py  crypto.py  db.py  logging_config.py  migrations.py  storage.py  tables.py
omniagent/api/: auth.py  crypto.py  db.py  main.py  metrics.py  migrations.py  models.py  openapi.py  queries.py  queue.py  secrets.py  sse_hub.py  ws.py
omniagent/api/routes/: agents.py  auth.py  memory.py  namespaces.py  oauth2.py  schedules.py  sessions.py  settings.py  sse.py  toolboxes.py  tools.py
omniagent/control_plane/: auth.py  db.py  main.py  migrations.py  models.py  openapi.py  queue.py  redis_client.py  secrets.py  ws.py
omniagent/control_plane/routes/: agents.py  internal.py  namespaces.py  oauth2.py  schedules.py  sessions.py  settings.py  skills.py  sse.py  toolboxes.py  tools.py
omniagent/worker/: __main__.py  auth.py  config.py  events.py  http.py  job.py  lifecycle.py  models.py  monty.py  native.py  prompts.py  queries.py  scheduler.py  tools.py
omniagent/worker/harness/: _env.py  antigravity.py  base.py  claude.py  pydantic_ai.py
ui/: index.html
