[project]
name = "omniagent"
version = "0.1.0"
description = "Self-hosted AI agent platform — run agents across multiple LLM providers"
requires-python = ">=3.12"
dependencies = [
    # control plane
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]",
    "psycopg-pool",

    # job queue
    "procrastinate[aiopg]",

    # tool layer
    "pydantic",
    "pydantic-settings",
    "pydantic-monty",

    # agent harnesses
    "claude-agent-sdk",
    "google-antigravity",

    # crypto
    "cryptography",
    "argon2-cffi",

    # websockets
    "websockets",

    # worker HTTP client
    "httpx",

    # sse
    "sse-starlette",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",  # TestClient
]

[project.scripts]
omniagent-server = "omniagent.control_plane.main:app"
omniagent-worker = "omniagent.worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omniagent"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
