[project]
name = "omniagent"
version = "0.1.0"
description = "Self-hosted AI agent platform — run agents across multiple LLM providers"
requires-python = ">=3.14"
dependencies = [
    # control plane
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]",
    "psycopg-pool",
    # job queue
    "procrastinate",
    # tool layer
    "pydantic",
    "pydantic-settings",
    "pydantic-monty",
    # agent harnesses
    "claude-agent-sdk",
    "google-antigravity",
    "mcp",
    # crypto
    "argon2-cffi",
    "cryptography",
    # yaml spec import
    "pyyaml",
    # worker HTTP client
    "httpx",
    # sse
    "sse-starlette",
    # metrics
    "prometheus-client",
    # tracing
    "langfuse",
    "sqlalchemy[asyncio]",
    "pydantic-ai",
    "minio",
    "markitdown[pdf,docx,pptx,xlsx]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",  # TestClient
]

[project.scripts]
omniagent-server = "omniagent.api.main:app"
omniagent-worker = "omniagent.worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omniagent"]

[dependency-groups]
dev = [
    "pip-audit",
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "ruff",
    "pre-commit",
    "pyright",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
